Fix Input controls overflowing in Firefox

--- a/src/components/Dictionary.scss
+++ b/src/components/Dictionary.scss
@@ -18,6 +18,7 @@
 
 .dictionary__item-input {
   width: 100%;
+  min-width: 0;
   font-size: 24px;
   border: 0;
   color: darkgrey;
@@ -75,6 +76,7 @@
   border: 1px solid lightgray;
   padding: 6px;
   width: 100%;
+  min-width: 0;
   margin-right: 2px;
 }
 
